<resources>
    <string name="app_name">PreDict</string>
    <string name="producer">by Alexoft</string>
    <!-- hints -->
    <string name="hint_homonym_id">Word to distinct homonyms</string>
    <string name="hint_catchword">Word (one spell variant per line)</string>
    <string name="hint_transcription">Transcription (one variant per line)</string>
    <string name="hint_notes">Notes to word, translation, usage etc.</string>
    <string name="hint_translation">Translation</string>
    <string name="hint_tags">Tags (one tag per line)</string>
    <string name="hint_examples">Examples</string>
    <string name="hint_audio">Audio</string>
    <string name="hint_pictures">Pictures</string>
    <string name="hint_search">Search word</string>
    <!-- label texts -->
    <string name="label_text_add_homonym_id">Add homonym identifier</string>
    <string name="label_text_add_transcription">Add transcription</string>
    <string name="label_text_add_notes">Add notes</string>
    <string name="label_text_add_tags">Add tags</string>
    <string name="label_text_add_examples">Add examples</string>
    <string name="label_text_add_audio">Add audio</string>
    <string name="label_text_add_pictures">Add pictures</string>
    <string name="label_button_delete">Delete</string>
    <!--menu items-->
    <string name="menu_item_discard">Discard</string>
    <string name="menu_item_clone">Clone word card</string>
    <string name="menu_item_train_words">Check words</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_edit_word">Edit word</string>
    <!--titles-->
    <string name="title_activity_words">Words</string>
    <string name="title_activity_add_word">Add word</string>
    <string name="title_activity_edit_word">Edit word</string>
    <string name="title_activity_train_words">Train words</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
